--- a/index.adoc
+++ b/index.adoc
@@ -4,13 +4,13 @@
 
 Exercícios de processamento digital de imagens com o OpenCV. Temas dos Exercicios:
 
-1. link:Manipulando_pixels_em_uma_imagem/cap2.html[Manipulando pixels em uma imagem]
-2. link:Serialização_de_dados_em_ponto_flutuante_via_FileStorage/cap3.html[Serialização de dados em ponto flutuante via FileStorage]
-3. link:Decomposição_de_imagens_em_planos_de_bits/cap4.html[Decomposição de imagens em planos de bits]
-4. link:Preenchimento_de_regiões/cap5.html[Preenchimento de regiões]
-5. link:Manipulação_de_histogramas/cap6.html[Manipulação de histogramas]
-6. link:Filtragem_no_domínio_espacial_I/cap7.html[Filtragem no domínio espacial I]
-7. link:Filtragem_no_domínio_espacial_II/cap8.html[Filtragem no domínio espacial II]
+1. link:Manipulando pixels em uma imagem/cap2.html[Manipulando pixels em uma imagem]
+2. link:Serialização de dados em ponto flutuante via FileStorage/cap3.html[Serialização de dados em ponto flutuante via FileStorage]
+3. link:Decomposição de imagens em planos de bits/cap4.html[Decomposição de imagens em planos de bits]
+4. link:Preenchimento de regiões/cap5.html[Preenchimento de regiões]
+5. link:Manipulação de histogramas/cap6.html[Manipulação de histogramas]
+6. link:Filtragem no domínio espacial I/cap7.html[Filtragem no domínio espacial I]
+7. link:Filtragem no domínio espacial II/cap8.html[Filtragem no domínio espacial II]
 
 
 
