--- a/Serialização_de_dados_em_ponto_flutuante_via_FileStorage/cap3.adoc
+++ b/Serialização_de_dados_em_ponto_flutuante_via_FileStorage/cap3.adoc
@@ -54,6 +54,8 @@ int main(int argc, char** argv) {
 
 Saida em PNG:
 
+:imagesdir:
+
 . Imagem gerada pelo programa filestorage.
 
 image::senoide-256(127).png[senoide-256(127)]
