--- a/Decomposição_de_imagens_em_planos_de_bits/cap4.adoc
+++ b/Decomposição_de_imagens_em_planos_de_bits/cap4.adoc
@@ -8,3 +8,51 @@ O problema consiste em escrever um programa que recupere a imagem resultante de 
 :imagesdir:
 
 .desafio-esteganografia.png é a imagem de entrada. 
+
+image::desafio-esteganografia.png[desafio-esteganografia]
+
+Programa esteg-encode:
+[source,C++]
+----
+#include <iostream>
+#include <opencv2/opencv.hpp>
+
+int main(int argc, char**argv) {
+  cv::Mat imagemPortadora;
+  cv::Vec3b valPortadora, valEscondida;
+  int nbits = 3;
+
+  imagemPortadora = cv::imread(argv[1], cv::IMREAD_COLOR);
+  
+  if (imagemPortadora.empty()) {
+    std::cout << "imagem nao carregou corretamente" << std::endl;
+    return (-1);
+  }
+
+  for (int i = 0; i < imagemPortadora.rows; i++) {
+    for (int j = 0; j < imagemPortadora.cols; j++) {
+      valPortadora = imagemPortadora.at<cv::Vec3b>(i, j);
+      valPortadora[0] = valPortadora[0] << (8-nbits);
+      valPortadora[1] = valPortadora[1] << (8-nbits);
+      valPortadora[2] = valPortadora[2] << (8-nbits);
+      valEscondida[0] = valPortadora[0];
+      valEscondida[1] = valPortadora[1];
+      valEscondida[2] = valPortadora[2];
+      imagemPortadora.at<cv::Vec3b>(i, j) = valEscondida;
+    }
+  }
+  imwrite("esteganografia.png", imagemPortadora);
+  return 0;
+}
+
+----
+
+Para recuperar a imagem foram extraídos os 3 bits menos significativos da imagem e eles foram colocados no lugar dos bits mais significativos.
+
+Saida do programa:
+
+:imagesdir:
+
+.Imagem recuperada da esteganografia. 
+
+image::esteganografia.png[esteganografia]
